Added import of tab-(or space-)separated data file.

--- a/validator.ipynb
+++ b/validator.ipynb
@@ -10,8 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -23,18 +25,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Use the following cell to import CSV experiment data"
+    "## Use the following cell to import tab-separated experiment data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "frame = pd.read_csv(\"data.tsv\", delimiter='\\t', header=0)"
+    "filename = \"data/exp1420.tsv\"\n",
+    "exp = pd.read_csv(filename, sep=\"\\t|[ ]{1,}\", engine='python', skiprows=2, names=['Time', 'A', 'D', 'U'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "init = pd.read_csv(filename, sep=\"\\t|[ ]{1,}\", engine='python', skiprows=1, names=['A', 'D', 'U', 'C', 'T'], nrows=1, usecols=range(2, 7))"
    ]
   },
   {
